# test_recs_model

./: .flake8  .gitignore  .isort.cfg  .mlflowignore  .pre-commit-config.yaml  Jenkinsfile  Makefile  README.md  clean.sh  config.yaml  create_git_tag.sh  main.py  pyproject.toml  requirements.txt  run.sh  setup.py  setup_venv.sh
data/: account_features
data/daily_movie_vod_dl_features/filename_date=20230430/: e0005646177d474ab4fa5d39dc19f4c8-0.parquet
data/daily_movie_vod_dl_features/filename_date=20230514/: e0005646177d474ab4fa5d39dc19f4c8-0.parquet
data/online_content_features_dhash/filename_date=20230217/: 8cb7a27633964ab582937fadc739a5d1-0.parquet
data/online_content_features_dhash/filename_date=20230302/: 8cb7a27633964ab582937fadc739a5d1-0.parquet
data/online_content_features_dhash/filename_date=20230316/: 8cb7a27633964ab582937fadc739a5d1-0.parquet
data/online_content_features_dhash/filename_date=20230319/: 8cb7a27633964ab582937fadc739a5d1-0.parquet
data/online_user_features_dhash/filename_date=20230311/: 1180b5526031401c810437e1b3dad9ba-0.parquet
model_configs/: constant.py
model_configs/models/: dhashdlrm.yaml  dhashtwotower.yaml
model_configs/tuning/: bayes_searcher_tuning.yaml
recmodel/: src.py
recmodel/base/: data_loaders.py  experiment_manager.py  feature_manager.py  metrics.py  model_analysis.py  model_wrappers.py  pipelines.py  searcher_wrappers.py
recmodel/dataloader/: dl.py  dl_datamodule.py  dl_feature_assembly.py  popularity_tricks.py
recmodel/model/: evaluation.py  model_core.py  model_mlflow.py  model_modules.py  model_pipelines.py  model_wrappers.py
tests/: test_rec_model.py
(+376 files in other folders)
